tests/errors/index_non_integer_substring3.f90
program index_non_integer_subarray3
    character(8) :: x
    x = "dothraki"
    print *, x(1.1)
end program
